# ESPORTEZ-MANAGER

./: .env.example  .gitignore  DEPENDENCY_MANIFEST.md  LICENSE  README.md  VERIFICATION_REPORT.md  project.godot
docs/: api.md  websocket.md
networking/: README.md  pyproject.toml
networking/src/esportez_net/: __init__.py  client.py  pool.py
networking/tests/: __init__.py
schemas/: __init__.py  tournament.py
services/api/: README.md  pyproject.toml
services/api/src/esportez/: __init__.py  main.py
services/api/src/esportez/models/: tournament.py
services/api/src/esportez/routers/: matches.py  teams.py  tournaments.py
services/api/src/esportez/schemas/: tournament.py
services/api/src/esportez/services/: __init__.py  websocket_notifier.py
services/api/tests/: test_health.py  test_teams.py  test_tournaments.py
services/websocket/: README.md  pyproject.toml
services/websocket/src/esportez_ws/: __init__.py  connection.py  server.py
services/websocket/tests/: test_server.py
sim-core/: SimCore.sln
sim-core/ConsoleRunner/: ConsoleRunner.csproj
sim-core/SimConsoleRunner/: SimConsoleRunner.csproj
sim-core/SimCore/: SimCore.csproj
