[tool.poetry]
name = "esportez-manager-networking"
version = "0.1.0"
description = "Networking layer for ESPORTEZ-MANAGER"
authors = ["ESPORTEZ Team <team@esportez.com>"]
readme = "README.md"
packages = [{include = "esportez_net", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
websockets = "^12.0"
pydantic = "^2.5.0"
tenacity = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
respx = "^0.20.0"
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
