[tool.poetry]
name = "esportez-manager-websocket"
version = "0.1.0"
description = "WebSocket server for ESPORTEZ-MANAGER"
authors = ["ESPORTEZ Team <team@esportez.com>"]
readme = "README.md"
packages = [{include = "esportez_ws", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^12.0"
redis = "^5.0.0"
pydantic = "^2.5.0"
python-json-logger = "^2.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
